# netconf-mcp

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO-ARISTA.md  DISCOVERY_DEMO_SUMMARY.md  README.md  SECURITY.md  demo-arista-views.py  demo-lab-discovery.py  demo-mcp-calls.py  lab-inventory.arista.example.json  lab-inventory.arista.json  lab-inventory.example.json  lab-inventory.json  pyproject.toml
.github/workflows/: tests.yml
.opencode/: README.md  opencode.json
docs/: architecture.md  arista-lab.md  integration-guide.md  safe-operations.md  vendors.md
labs/arista-ceos/: README.md  containerlab.yml  startup-config-leaf1.cfg  startup-config-leaf2.cfg  startup-config-spine.cfg  startup-config.cfg
scripts/: arista_snapshot.py  netconf_fixture_capture.py  tnsr_propose.py  tnsr_read_only_smoke.py  tnsr_show.py  tnsr_snapshot.py
src/netconf_mcp/: __init__.py  cli.py
src/netconf_mcp/core/: __init__.py  contracts.py
src/netconf_mcp/mcp/: __init__.py  server.py
src/netconf_mcp/proposals/: __init__.py  tnsr.py
src/netconf_mcp/protocol/: __init__.py  engine.py
src/netconf_mcp/transport/: __init__.py  fixtures.py  live.py
src/netconf_mcp/utils/: filters.py  redact.py
src/netconf_mcp/vendors/: __init__.py  arista.py  arista_views.py  tnsr.py  (+1 more)
tests/: conftest.py  test_arista_collector.py  test_arista_snapshot_script.py  test_arista_views.py  test_cli.py  test_live_transport.py  test_netconf_fixture_capture.py  test_tnsr_collector.py  test_tnsr_proposal.py  test_tnsr_propose_script.py  test_tnsr_show_script.py  test_tnsr_smoke.py  test_tnsr_views.py
tests/fixtures/: inventory.json
tests/integration/: test_mcp_flow.py
(+5 files in other folders)
