[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netconf-mcp"
version = "0.1.0"
description = "Fixture-first NETCONF MCP server for read-oriented network automation workflows"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["netconf", "mcp", "yang", "network-automation", "tnsr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
dependencies = [
  "mcp>=1,<2",
  "pydantic>=2.7,<3",
  "lxml>=5.3,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[project.scripts]
netconf-mcp = "netconf_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
